8174101: Bootclasspath append should not invalidate CDS archive

Reviewed-by: iklam, jiangli